Finished for now

--- a/index.html
+++ b/index.html
@@ -5,74 +5,82 @@
     <meta name="viewport" content="width=device-width">
     <title>repl.it</title>
     <link href="./style.css" rel="stylesheet" type="text/css">
+    <link 
+    rel="stylesheet" 
+    href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" 
+    integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" 
+    crossorigin="anonymous"/>
   </head>
   <body>
     <div >
-      <img id="pic" src="./attack on titan banner.jpg" alt="Ten warriors looking at the distance of a ruined land with their backs turned to the viewer">
+      <img id="pic" src="./images/attack on titan banner.jpg" alt="Ten warriors looking at the distance of a ruined land with their backs turned to the viewer">
     </div>
+    <h1>Help These Men</h1>
     <div id="icons">
-      <span>Icon</span>
-      <span>Icon</span>
-      <span>Icon</span>
-      <span>Icon</span>
+      <span><i class="fas fa-heart"></i></span>
+      <span><i class="fas fa-umbrella"></i></span>
+      <span><i class="fas fa-anchor"></i></span>
+      <span><i class="fas fa-camera"></i></span>
     </div>
     <div id="pics">
      <span>
        <div>
-         <img id="king" src="./king fritz.webp" alt="drawing of an older man looking down">
+         <img id="king" src="./images/king fritz.webp" alt="drawing of an older man looking down">
        </div>
        <div>
-         <strong>Bold Title</strong>
+         <strong>King Fritz</strong>
        </div>
        <div>
-         <p>A discription</p>
+         <p>A mad king who made his own children eat their mother so they could inherit her powers.</p>
        </div>
        <div>
-         <a href="your choice of link">Link Text</a>
+         <a href="https://www.psychologytoday.com/us/blog/in-excess/201311/turn-the-eater" target="_blank">Click here to help Him</a>
        </div>
      </span>
      <span>
        <div> 
-         <img id="eren" src="./Eren.jpg" alt="pic">
+         <img id="eren" src="./images/Eren.jpg" alt="pic">
        </div>
        <div>
-         <strong>Bold Title</strong>
+         <strong>Eren Jeager</strong>
        </div>
        <div>
-         <p>A discription</p>
+         <p>A genocidal maniac who believes the only way the save his people is to kill eveeryone else.</p>
        </div>
        <div>
-         <a href="your choice of link">Link Text</a>
+         <a href="https://www.bop.gov/locations/institutions/flm/" target="_blank">Click here to help Him</a>
        </div>
       </span>
       <span>
         <div >
-          <img id="zeke" src="./zeke.jpg" alt="pic">
+          <img id="zeke" src="./images/zeke.jpg" alt="pic">
         </div>
         <div>
-          <strong>Bold Title</strong>
+          <strong>Zeke Jeager</strong>
         </div>
         <div>
-          <p>A discription</p>
+          <p>An older brother of a genocidal maniac who believes that the only way to save everyone is to commit mass genocide.</p>
         </div>
         <div>
-          <a href="your choice of link">Link Text</a>
+          <a href="https://www.crisistextline.org/" target="_blank">Click here to help Him</a>
         </div>
       </span>
       <span>
         <div>
-          <img id="reiner" src="./reiner.jpg" alt="pic">
+          <img id="reiner" src="./images/reiner.jpg" alt="pic">
         </div>
         <div>
-          <strong>Bold Title</strong>
+          <strong>Reiner Braun</strong>
         </div>
         <div>
-          <p>A discription</p>
+          <p>A soldier who lost his mind undercover. Sometimes he can't tell which side is the good or the bad.
+          </p>
         </div>
         <div>
-          <a href="your choice of link">Link Text</a>
+          <a href="https://www.mentalhealth.va.gov/index.asp?utm_source=google&utm_medium=cpc&utm_campaign=search-va&utm_content=resources&utm_term=veterans%20health%20administration&gclid=CjwKCAiAjs2bBhACEiwALTBWZew253cGGcms-_LEJNzaMuljE6pjd3z11Rv3h6Hc4pYP4HFnccG-6RoC3pIQAvD_BwE" target="_blank">Click here to help Him</a>
         </div>
       </span>
     </div>
-  </body>
+     <h2>These men all have a variety of issues and some of them overlap so please HELP THEM!!!</h2>
+   </body>
 </html>
