--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
      </span>
      <span>
        <div> 
-         <img id="eren" src="./images/Eren.jpg" alt="pic">
+         <img id="eren" src="./images/Eren.jpg" alt="An anime man with green eyes and dark brown hair.">
        </div>
        <div>
          <strong>Eren Jeager</strong>
@@ -53,7 +53,7 @@
       </span>
       <span>
         <div >
-          <img id="zeke" src="./images/zeke.jpg" alt="pic">
+          <img id="zeke" src="./images/zeke.jpg" alt="An anime man with glasses and blonde hair.">
         </div>
         <div>
           <strong>Zeke Jeager</strong>
@@ -67,7 +67,7 @@
       </span>
       <span>
         <div>
-          <img id="reiner" src="./images/reiner.jpg" alt="pic">
+          <img id="reiner" src="./images/reiner.jpg" alt="An anime man with blonde hair and a serious look on his face.">
         </div>
         <div>
           <strong>Reiner Braun</strong>
